--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -3,7 +3,8 @@
   "name": "satancare",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
+    "start:android": "expo start --android",
+    "build:android": "expo build:android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
