--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "name": "satancare",
   "scripts": {
@@ -47,5 +48,5 @@
     "expo-cli": "^3.15.4",
     "jest-expo": "~36.0.1"
   },
-  "private": true
+  "private": false
 }
