--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -43,10 +43,15 @@
     "@storybook/addons": "^5.3.17",
     "@storybook/react-native": "^5.3.17",
     "@storybook/react-native-server": "^5.3.17",
+    "@types/jest": "^25.2.1",
+    "@types/react": "^16.9.35",
+    "@types/react-native": "^0.62.8",
+    "@types/react-test-renderer": "^16.9.2",
     "babel-loader": "^8.0.6",
     "babel-preset-expo": "~8.0.0",
-    "expo-cli": "^3.15.4",
-    "jest-expo": "~36.0.1"
+    "expo-cli": "^3.20.5",
+    "jest-expo": "~36.0.1",
+    "typescript": "^3.9.2"
   },
   "private": false
 }
