--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -47,7 +47,9 @@
     "@types/react": "^16.9.35",
     "@types/react-native": "^0.62.8",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/styled-components": "^5.1.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-styled-components": "^1.10.7",
     "babel-preset-expo": "~8.0.0",
     "expo-cli": "^3.20.5",
     "jest-expo": "~36.0.1",
