--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -29,6 +29,7 @@
     "expo-web-browser": "~8.0.0",
     "fp-ts": "^2.6.1",
     "io-ts": "^2.2.3",
+    "io-ts-types": "^0.5.6",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
